# automacao_orangehrmonline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: automacao_orange_ci.yml
resources/data/: login_user.yml
resources/locators/: add_funcionario_locators.yml  cadastrar_locators.yml  home_locators.yml  login_locators.yml
resources/pages/: add_funcionario_page.robot  cadastrar_resources.robot  login_resources.robot
resources/utils/: web.resource
tests/: cadastrar_tests.robot  login_tests.robot
