[tool.poetry]
name = "automacao-orangehrm-rf"
version = "0.1.0"
description = "Automação web orange hrm online"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
robotframework = "^7.1.1"
robotframework-seleniumlibrary = "^6.6.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
